--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "add": "git add .",
     "commit": "git commit -m ",
-    "hadCommit": "git commit -m 'MongoDB'",
+    "hadCommit": "git commit -m 'redux middleware'",
     "push": "git push",
     "go": "npm run add && npm run hadCommit && npm run push",
     "confirm": "npm run add && npm run commit -- ",
