--- a/Node/Node-Learning/爬虫/package.json
+++ b/Node/Node-Learning/爬虫/package.json
@@ -4,7 +4,7 @@
   "description": "no",
   "main": "index.js",
   "scripts": {
-    "start": "node ./test"
+    "start": "node ./index"
   },
   "keywords": [
     "pc"
