--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "add": "git add .",
     "commit": "git commit -m ",
-    "hadCommit": "git commit -m 'Rx'",
+    "hadCommit": "git commit -m Node-Buffer",
     "push": "git push",
     "go": "npm run add && npm run hadCommit && npm run push",
     "confirm": "npm run add && npm run commit -- ",
