--- a/React/SSR/example/package.json
+++ b/React/SSR/example/package.json
@@ -4,11 +4,15 @@
   "description": "react-ssr",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "babel-node server/server.js",
+    "build": "webpack",
+    "go": "webpack-dev-server --history-api-fallback"
   },
   "author": "kimz",
   "license": "ISC",
   "devDependencies": {
+    "babel-cli": "^6.3.17",
     "babel-core": "^6.24.1",
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.1",
@@ -20,8 +24,8 @@
   "dependencies": {
     "ejs": "^2.5.6",
     "express": "^4.15.2",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
+    "react": "^0.14.5",
+    "react-dom": "0.14.8",
     "react-redux": "^5.0.4",
     "react-router": "2.0.0",
     "redux": "^3.6.0"
