--- a/React/SSR/example/package.json
+++ b/React/SSR/example/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "babel-node server/server.js",
     "build": "webpack",
-    "go": "webpack-dev-server --history-api-fallback"
+    "go": "webpack-dev-server",
+    "dev": "npm run build && npm run go"
   },
   "author": "kimz",
   "license": "ISC",
@@ -18,12 +19,15 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "react-hot-loader": "^1.3.1",
     "webpack": "^2.3.3",
     "webpack-dev-server": "^2.4.2"
   },
   "dependencies": {
     "ejs": "^2.5.6",
     "express": "^4.15.2",
+    "node-jsx": "^0.13.3",
+    "node-jsx-babel": "^0.14.2",
     "react": "^0.14.5",
     "react-dom": "0.14.8",
     "react-redux": "^5.0.4",
