--- a/React/SSR/example/package.json
+++ b/React/SSR/example/package.json
@@ -28,8 +28,8 @@
     "express": "^4.15.2",
     "node-jsx": "^0.13.3",
     "node-jsx-babel": "^0.14.2",
-    "react": "^0.14.5",
-    "react-dom": "0.14.8",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
     "react-router": "2.0.0",
     "redux": "^3.6.0"
