--- a/Node/Express/express-web-server/package.json
+++ b/Node/Express/express-web-server/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "chathaha",
+  "name": "express-web-server",
   "version": "1.0.0",
-  "description": "",
+  "description": "server express",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node dev/ioServer.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "chat"
+    "server"
   ],
   "author": "kimz",
   "license": "ISC",
@@ -28,12 +27,6 @@
     "webpack-merge": "^0.14.1"
   },
   "dependencies": {
-    "express": "^4.14.0",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2",
-    "react-redux": "^5.0.1",
-    "react-router": "^2.8.1",
-    "redux": "^3.6.0",
-    "socket.io": "^1.7.1"
+    "express": "^4.14.0"
   }
 }
