--- a/Vue/SSR/package.json
+++ b/Vue/SSR/package.json
@@ -4,7 +4,9 @@
   "description": "vue-ssr",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./server/server",
+    "stream": "node ./server/streamServer"
   },
   "keywords": [
     "vue",
