--- a/移动Web/wechatDevelopment/buildingWeb/package.json
+++ b/移动Web/wechatDevelopment/buildingWeb/package.json
@@ -17,10 +17,14 @@
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "css-loader": "^0.28.1",
+    "vue-loader": "^12.0.2",
+    "vue-template-compiler": "^2.3.1",
     "webpack": "^2.3.3",
     "webpack-dev-server": "^2.4.2"
   },
   "dependencies": {
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "vue": "^2.3.1"
   }
 }
