--- a/移动Web/wechatDevelopment/buildingWeb/package.json
+++ b/移动Web/wechatDevelopment/buildingWeb/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "dev": "npm run build && webpack-dev-server",
-    "start": "babel-node server/server"
+    "dev": "cross-env NODE_ENV=dev webpack-dev-server",
+    "start": "cross-env NODE_ENV=prod npm run build && cross-env NODE_ENV=prod babel-node server/server"
   },
   "author": "kimz",
   "license": "ISC",
@@ -17,14 +17,19 @@
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "cross-env": "^4.0.0",
     "css-loader": "^0.28.1",
+    "html-webpack-plugin": "^2.28.0",
     "vue-loader": "^12.0.2",
     "vue-template-compiler": "^2.3.1",
     "webpack": "^2.3.3",
-    "webpack-dev-server": "^2.4.2"
+    "webpack-dev-middleware": "^1.10.2",
+    "webpack-dev-server": "^2.4.2",
+    "webpack-hot-middleware": "^2.18.0"
   },
   "dependencies": {
     "express": "^4.15.2",
+    "jssha": "1.5.0",
     "vue": "^2.3.1"
   }
 }
