--- a/移动Web/wechatDevelopment/buildingWeb/package.json
+++ b/移动Web/wechatDevelopment/buildingWeb/package.json
@@ -27,6 +27,7 @@
     "webpack-dev-server": "^2.4.2"
   },
   "dependencies": {
+    "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "jssha": "1.5.0",
     "vue": "^2.3.1"
