--- a/移动Web/wechatDevelopment/buildingWeb/package.json
+++ b/移动Web/wechatDevelopment/buildingWeb/package.json
@@ -19,7 +19,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "cross-env": "^4.0.0",
     "css-loader": "^0.28.1",
-    "html-webpack-plugin": "^2.28.0",
+    "style-loader": "^0.17.0",
     "vue-loader": "^12.0.2",
     "vue-template-compiler": "^2.3.1",
     "webpack": "^2.3.3",
@@ -27,9 +27,12 @@
     "webpack-dev-server": "^2.4.2"
   },
   "dependencies": {
+    "axios": "^0.16.1",
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "jssha": "1.5.0",
-    "vue": "^2.3.1"
+    "vue": "^2.3.1",
+    "vue-router": "^2.5.3",
+    "weui": "^1.1.2"
   }
 }
