--- a/webpack/treeShaking/package.json
+++ b/webpack/treeShaking/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack"
+    "start": "webpack",
+    "build": "webpack --config webpack.treeShaking.js"
   },
   "keywords": [
     "webpack",
@@ -14,10 +15,14 @@
   "author": "kimz",
   "license": "ISC",
   "devDependencies": {
+    "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
+    "babel-plugin-minify-dead-code-elimination": "^0.1.6",
+    "babel-preset-babili": "^0.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "babili-webpack-plugin": "^0.1.1",
     "webpack": "^2.6.0"
   }
 }
