--- a/Node/koa/package.json
+++ b/Node/koa/package.json
@@ -16,6 +16,7 @@
     "koa": "^2.2.0",
     "koa-bodyparser": "^2.5.0",
     "koa-compose": "^4.0.0",
-    "koa-router": "^7.1.1"
+    "koa-router": "^7.1.1",
+    "koa-static": "^4.0.1"
   }
 }
