--- a/Node/koa/package.json
+++ b/Node/koa/package.json
@@ -13,10 +13,12 @@
   "author": "kimz",
   "license": "ISC",
   "dependencies": {
+    "busboy": "^0.2.14",
     "koa": "^2.2.0",
     "koa-bodyparser": "^2.5.0",
     "koa-compose": "^4.0.0",
     "koa-router": "^7.1.1",
-    "koa-static": "^4.0.1"
+    "koa-static": "^4.0.1",
+    "mysql": "^2.14.1"
   }
 }
