--- a/webpack/treeShaking/package.json
+++ b/webpack/treeShaking/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack",
-    "build": "webpack --config webpack.treeShaking.js"
+    "build": "webpack --config webpack.treeShaking.js",
+    "dev": "webpack-dev-server --inline --hot",
+    "only": "webpack-dev-server --hotOnly"
   },
   "keywords": [
     "webpack",
@@ -23,6 +25,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babili-webpack-plugin": "^0.1.1",
-    "webpack": "^2.6.0"
+    "webpack": "^2.7.0",
+    "webpack-dev-server": "^2.8.2"
   }
 }
