--- a/webpack/myself/package.json
+++ b/webpack/myself/package.json
@@ -5,11 +5,15 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack"
+    "start": "webpack",
+    "dev": "webpack-dev-server --inline --hot",
+    "not": "webpack-dev-server"
   },
   "author": "kimz",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "^3.5.5"
+    "webpack": "^3.11.0",
+    "webpack-cli": "^2.0.10",
+    "webpack-dev-server": "^2.11.1"
   }
 }
